feature - Slider added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.ignoreWords": [
+        "Poolhouse",
         "coloumn",
         "flexcenter",
         "flexcol",
         "flexitem",
         "flexwrap",
+        "swiper",
         "thetop"
     ]
 }
