feat(trendingPage): Add trending products section to the website

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "flexcol",
         "flexitem",
         "flexwrap",
+        "hoverable",
+        "remixicon",
         "swiper",
         "thetop"
     ]
